--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 }
 body {
   background: var(--bg-url) no-repeat center/cover;
+  height: 100vh;
 }
 body * {
   font-family: "Inter", sans-serif;
@@ -129,4 +130,14 @@ ul li a:hover {
 footer {
   padding: 24px 0;
   text-align: center;
+}
+/* media queries */
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
