--- a/style.css
+++ b/style.css
@@ -23,7 +23,10 @@
 }
 body {
   background: var(--bg-url) no-repeat center/cover;
-  height: 100vh;
+  background-attachment: fixed;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 body * {
   font-family: "Inter", sans-serif;
@@ -160,5 +163,63 @@ footer {
   }
   to{
     left: 0;
+  }
+}
+/*Link para voltar*/
+#back-link a{
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--text-color);
+  display: inline-block;
+  margin-bottom: 16px;
+  transition: color 0.2s;
+}
+#back-link a:hover{
+  color: var(--stroke-color);
+}
+/*Conteudo da página Sobre mim*/
+#about-content {
+  background: var(--stroke-color);
+  padding: 24px;
+  border: 0px solid var(--stroke-color);
+  border-radius: 10px;
+  backdrop-filter: blur(4px);
+  margin-top: 16px;
+}
+#about-content h2{
+  margin-top: 24px;
+  font-size: 20px;
+  color: var(--text-color);
+}
+#about-content p{
+  margin-bottom: 16px;
+  line-height: 1.5;
+}
+#about-content ul{
+  padding: 0;
+  list-style: none;
+}
+#about-content ul il{
+  margin-bottom: 8px;
+  padding-left: 20px;
+  position: relative;
+  color: var(--text-color);
+}
+#about-content ul il:before{
+  content: "*";
+  color: var(--text-color);
+  font-size: 18px;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+@media (max-width: 768px){
+  background-size: cover;
+  background-attachment: scroll;
+}
+@media (max-width: 480px){
+  body{
+    background-position: top;
   }
 }
